tests/errors/compiler/float_instead_int/float_in_int_func.c
int oper(int a)
{
	return a++;
}

int main()
{
	float i = 10;
	oper(i);
	return 0;
}
